<resources>
    <string name="app_name">Zest</string>
    <string name="continue_with_facebook">Sign up with Facebook</string>
    <string name="log_in">Log in</string>
    <string name="continue_with_google">Sign up with Google</string>
    <string name="sign_up">Sign up</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="logout">Logout</string>
    <string name="zest">Z E S T.</string>
    <string name="hello_user">Hello User!</string>
    <string name="streak_placeholder">You\'re currently on a 7 day streak! Keep it going!</string>
    <string name="quote_of_the_day">Quotes of the Day:</string>
    <string name="placeholder_quote">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et</string>
    <string name="author">Author</string>
    <string name="home">Home</string>
    <string name="journal">Journal</string>
    <string name="search">Search</string>
    <string name="calendar">Calendar</string>
    <string name="username">Username</string>
    <string name="hello">Hello</string>
    <string name="placeholder">placeholder</string>
    <string name="exclamationmark">!</string>
    <string name="placeholder_date">11.11.2011</string>
    <string name="title">Title</string>
    <string name="type_here">Type here...</string>
    <string name="motivating_quotes">Motivating Quotes:</string>
    <string name="entry">Entry</string>
    <string name="no_entries_on_this_day">No Entries on this Day</string>
    <string name="tag">Tag</string>
    <string name="add_tag">Add Tag</string>
    <string name="enter_tag_here">Enter Tag here...</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="search_for_entries">Search for Entries...</string>
    <string name="_0000_search_results_found">0000 Search Results Found!</string>
    <string name="placeholder_time">00:00</string>
    <string name="placeholder_text">...content content content content content content content content content content content content content content content content content content...</string>
    <string name="z_e_s_t">Z E S T.</string>
    <string name="delete">Delete</string>
    <string name="are_you_sure_you_want_to_delete_this_entry">Are you sure you want to delete this Entry?</string>
    <string name="stats">Stats</string>
    <string name="december_2024">December 2024</string>
    <string name="account_settings">Account Settings</string>
    <string name="placeholder_email">placeholder@email.com</string>
    <string name="placeholder_password">**********</string>
    <string name="preferences">Preferences</string>
    <string name="motivational_quotes">Motivational Quotes</string>
    <string name="enter_new_username_here">Enter new Username here...</string>
    <string name="save">Save</string>
    <string name="close">Close</string>
    <string name="reset_password_dialog">We send you an email to change your password.</string>

    <string name="continue_btn">Continue</string>
    <string name="password_">Password...</string>
    <string name="new_email">New Email...</string>
    <string name="search_dots">Search...</string>
    <string name="forgot_password_dots">Forgot Password...</string>
</resources>