<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_Alabaster">

    <Button
        android:id="@+id/btnFacebookLogin"
        style="@style/zest_button_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/continue_with_facebook"
        app:layout_constraintBottom_toTopOf="@+id/tvLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvLogin"
        style="@style/zest_button_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="64dp"
        android:text="@string/log_in"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnGoogleLogin"
        style="@style/zest_button_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/continue_with_google"
        app:layout_constraintBottom_toTopOf="@+id/btnFacebookLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnSignup"
        style="@style/zest_button_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        app:layout_constraintBottom_toTopOf="@+id/btnGoogleLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:strokeColor="@color/primary_taupe"
        app:strokeWidth="2dp" />
</androidx.constraintlayout.widget.ConstraintLayout>