<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:backgroundTint="@color/primary_Alabaster"
    app:strokeColor="@color/primary_taupe"
    app:strokeWidth="3dp"
    app:cardCornerRadius="6dp"
    android:layout_marginHorizontal="16dp"
    android:layout_marginVertical="8dp">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:padding="16dp">

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <TextView
                android:id="@+id/tvTitleSearch"
                android:layout_width="0dp"
                style="@style/dekko_text_18"
                android:layout_marginStart="8dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/title" />

            <TextView
                android:id="@+id/tvDateSearch"
                style="@style/dekko_text_18"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/placeholder_date" />

            <TextView
                android:id="@+id/tvTimeSearch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/dekko_text_18"
                android:layout_marginStart="16dp"
                android:text="@string/placeholder_time" />
        </LinearLayout>

        <TextView
            android:id="@+id/tvTextSearch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/placeholder_text"
            android:textAlignment="center"
            style="@style/dekko_text_18"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>