<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="320dp"
    android:layout_height="200dp"
    android:paddingVertical="32dp"
    android:paddingHorizontal="48dp"
    android:background="@drawable/dialog_background"
    >

    <Button
        android:id="@+id/btnCancel_deleteEntryDialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/zest_text_button"
        android:layout_marginTop="16dp"
        android:text="@string/cancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etTag" />

    <TextView
        android:id="@+id/etTag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="16dp"
        android:fontFamily="@font/dekko"
        android:layout_marginTop="24dp"
        style="@style/dekko_text_20"

        android:textStyle="bold"
        android:gravity="center"
        android:text="@string/are_you_sure_you_want_to_delete_this_entry"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnDelete_deleteEntryDialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/zest_text_button"
        android:layout_marginTop="16dp"
        android:text="@string/delete"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etTag" />




</androidx.constraintlayout.widget.ConstraintLayout>