<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_Alabaster">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnFacebookLogin"
        style="@style/zest_long_button_style"
        android:layout_marginBottom="16dp"
        android:text="@string/continue_with_facebook"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/tvLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvLogin"
        android:layout_width="160dp"
        android:layout_height="48dp"
        android:layout_marginBottom="64dp"
        android:fontFamily="@font/dekko"
        android:gravity="center"
        android:text="@string/log_in"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnGoogleLogin"
        style="@style/zest_long_button_style"
        android:layout_marginBottom="16dp"
        android:visibility="gone"
        android:text="@string/continue_with_google"
        app:layout_constraintBottom_toTopOf="@+id/btnFacebookLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSignup"
        style="@style/zest_long_button_style"
        android:layout_height="48dp"
        android:layout_marginBottom="16dp"
        android:text="Sign up"
        app:layout_constraintBottom_toTopOf="@+id/btnGoogleLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="120dp"
        android:layout_height="120dp"
        app:layout_constraintBottom_toTopOf="@+id/btnSignup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_zest" />

    <TextView
        android:id="@+id/tvLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/dekko"
        android:text="@string/z_e_s_t"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivLogo" />

</androidx.constraintlayout.widget.ConstraintLayout>