<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingVertical="32dp"
    android:layout_marginHorizontal="64dp"
    android:paddingHorizontal="48dp"
    android:background="@drawable/bg_alert_dialog"
    >

    <Button
        android:id="@+id/btnCancel_addTagDialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/zest_text_button"
        android:layout_marginTop="16dp"
        android:text="@string/cancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPassword"/>

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:background="@drawable/bg_edit_text"
        android:completionThreshold="0"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:fontFamily="@font/dekko"
        android:gravity="start|center"
        android:hint="@string/new_email"
        android:inputType="textEmailAddress"
        android:paddingHorizontal="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:background="@drawable/bg_edit_text"
        android:completionThreshold="0"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:fontFamily="@font/dekko"
        android:gravity="start|center"
        android:hint="@string/password_"
        android:inputType="textPassword"
        android:paddingHorizontal="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etEmail" />



    <Button
        android:id="@+id/btnContinue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/zest_text_button"
        android:layout_marginTop="16dp"
        android:text="@string/continue_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPassword" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="24dp"
        style="@style/dekko_text_18"
        android:textStyle="bold"
        android:text="Please enter your new email and confirm with your password."
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>