<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_Alabaster"
    tools:context=".ui.HomeFragment">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/cvZestLogo"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginHorizontal="16dp"
            android:backgroundTint="@color/primary_taupe"
            app:cardElevation="0dp" />

        <TextView
            android:id="@+id/tvHeader"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"

            android:fontFamily="@font/dekko"
            android:gravity="center|start"
            android:text="@string/zest"
            android:textSize="32sp" />

        <Button
            android:id="@+id/btnLogout"
            style="@style/zest_long_button_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/logout" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cvProfile"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginHorizontal="16dp"
            android:backgroundTint="@color/primary_taupe"
            app:cardCornerRadius="16dp"
            app:cardElevation="0dp" />


    </LinearLayout>

    <TextView
        android:id="@+id/tvHelloUser"
        style="@style/zest_long_button_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/hello_user"

        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <TextView
        android:id="@+id/tvStreak"
        style="@style/zest_long_button_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:paddingHorizontal="8dp"
        android:text="@string/streak_placeholder"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvHelloUser" />

    <TextView
        android:id="@+id/tvQuote"
        style="@style/zest_long_button_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/quote_of_the_day"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvStreak" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvQuote"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="24dp"
        android:clipToPadding="false"
        android:orientation="horizontal"
        android:paddingHorizontal="16dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvQuote"
        tools:listitem="@layout/quote_item" />


</androidx.constraintlayout.widget.ConstraintLayout>