<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cvSearchItem"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="16dp"
    android:layout_marginVertical="8dp"
    android:backgroundTint="@color/primary_Alabaster"
    app:cardCornerRadius="12dp"
    app:strokeColor="@color/primary_taupe"
    app:strokeWidth="3dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:padding="16dp">

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tvTitleSearch"
                style="@style/dekko_text_16"
                android:layout_width="0dp"

                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/title"
                android:textSize="24sp" />



        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_marginTop="8dp"
            android:gravity="start"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout3">
            <TextView
                android:id="@+id/tvTimeSearch"
                style="@style/dekko_text_14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/placeholder_time" />

            <TextView
                android:id="@+id/tvDateSearch"
                style="@style/dekko_text_14"
                android:layout_marginStart="16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/placeholder_date" />




        </LinearLayout>

        <TextView
            android:id="@+id/tvTextSearch"
            style="@style/dekko_text_16"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"

            android:layout_marginTop="8dp"
            android:maxHeight="150dp"
            android:maxLines="2"
            android:text="@string/placeholder_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvTags"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTextSearch"
            tools:itemCount="3"
            tools:listitem="@layout/item_tag" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>